--- a/ERC_Prices.ipynb
+++ b/ERC_Prices.ipynb
@@ -2,31 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import Packages\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
-    "import requests \n",
     "import datetime\n",
-    "from nrgstreamApi import NRGStreamApi\n",
     "from ErcotApi import ercot_connection\n",
-    "import plotly.graph_objs as go\n",
-    "from plotly.subplots import make_subplots\n",
-    "import plotly.figure_factory as ff\n",
-    "import urllib3\n",
     "import seaborn as sns\n",
-    "import statistics\n",
-    "import plotly.express as px\n",
     "pd.options.mode.chained_assignment = None \n",
-    "cm = sns.color_palette(\"coolwarm\", as_cmap=True)\n",
-    "\n",
-    "urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)\n",
-    "pd.options.plotting.backend = \"plotly\""
+    "#urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)\n"
    ]
   },
   {
@@ -42,92 +30,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Obtain Historical Data From NRG Stream\n",
-    "def csvStreamToPandas(streamData):\n",
-    "# one appraoch to load a dataframe directly from the API csv result.\n",
-    "    # split lines of return string from api\n",
-    "    streamData = streamData.split(\"\\n\")\n",
+    "# def ercot_fundamentlas(for_act):\n",
+    "#     erc_historical = pd.read_pickle(\"erc_fundamentals.pkl\")\n",
+    "#     if for_act == \"actual\":\n",
+    "#         dtfrom = max(erc_historical[\"Date_y\"])\n",
+    "#         dtto = datetime.date.today() + datetime.timedelta(days=0)\n",
+    "#         solar = 159280\n",
+    "#         wind = 110218\n",
+    "#         load = 112403\n",
+    "#     else:\n",
+    "#         dtfrom = datetime.date.today() + datetime.timedelta(days=0)\n",
+    "#         dtto = datetime.date.today() + datetime.timedelta(days=2)\n",
+    "#         solar = 159277\n",
+    "#         wind = 45358\n",
+    "#         load = 2635\n",
     "    \n",
-    "    # remove empty elements from list\n",
-    "    streamData = [x for x in streamData if len(x) > 0] \n",
+    "#     rtm_hub = nrg_clean(str(dtfrom), str(dtto), [\"prices\", \"rtm_north\"], [92594])\n",
+    "#     erc_fundamentals = nrg_clean(str(dtfrom), str(dtto), [\"fundamentals\",\"solar\", \"wind\", \"outages\", \"load\"], [solar, wind, 127656, load])\n",
+    "\n",
+    "#     erc_fundies = pd.merge(pd.merge(pd.merge(erc_fundamentals[0], erc_fundamentals[1][[\"Date\",\"wind\"]], on=\"Date\", how=\"left\"), \n",
+    "#                             erc_fundamentals[2][[\"Date\", \"outages\"]],on = \"Date\",how=\"left\"),\n",
+    "#                             erc_fundamentals[3][[\"Date\", \"load\"]],on = \"Date\",how=\"left\")     \n",
     "    \n",
-    "    # remove header data\n",
-    "    streamData = [x for x in streamData if x[0] != '#'] \n",
-    "                    \n",
-    "    # split elements into lists of lists                     \n",
-    "    streamData = [x.split(\",\") for x in streamData] \n",
-    "    \n",
-    "    # create dataframe\n",
-    "    df = pd.DataFrame(streamData[1:], columns=streamData[0]) \n",
-    "    \n",
-    "    return df\n",
-    "\n",
-    "def nrg_clean(datefrom, dateto, call, nrgcode):\n",
-    "    nrgApi = NRGStreamApi(username='aviyan.khadka@engie.com', password='Nrg4AviyanEn1')\n",
-    "    nrg_all_data = list()\n",
-    "    j = 1\n",
-    "    for i in nrgcode:\n",
-    "        get_nrg_dt = nrgApi.GetStreamDataByStreamIds([i], datefrom, dateto)\n",
-    "        nrg_data = csvStreamToPandas(get_nrg_dt)\n",
-    "        nrg_data.columns = [\"Date\", call[j]]\n",
-    "        nrg_data[call[j]] = pd.to_numeric(nrg_data[call[j]])\n",
-    "        nrg_data[\"Year\"] = pd.to_datetime(nrg_data[\"Date\"]).dt.year\n",
-    "        nrg_data[\"Month\"] = pd.to_datetime(nrg_data[\"Date\"]).dt.month\n",
-    "        nrg_data[\"Day\"] = pd.to_datetime(nrg_data[\"Date\"]).dt.day\n",
-    "        nrg_data[\"Hour\"] = pd.to_datetime(nrg_data[\"Date\"]).dt.hour\n",
-    "        if call[0] == \"prices\":\n",
-    "            hourly_prices = nrg_data.groupby(['Year', 'Month', 'Day', \"Hour\"])[call[j]].mean().reset_index()\n",
-    "            hourly_prices[\"Date\"] = pd.to_datetime(hourly_prices[[\"Year\", \"Month\",\"Day\"]], format=\"%Y-%m-%d\")\n",
-    "            hourly_prices[\"DateTime\"] = pd.to_datetime(hourly_prices[[\"Year\", \"Month\",\"Day\", \"Hour\"]], format=\"%Y-%m-%d %H:00:00\")\n",
-    "            nrg_all_data.append(hourly_prices)\n",
-    "        else:\n",
-    "            nrg_all_data.append(nrg_data)\n",
-    "        j = j + 1\n",
-    "    return(nrg_all_data)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def ercot_fundamentlas(for_act):\n",
-    "    erc_historical = pd.read_pickle(\"erc_fundamentals.pkl\")\n",
-    "    if for_act == \"actual\":\n",
-    "        dtfrom = max(erc_historical[\"Date_y\"])\n",
-    "        dtto = datetime.date.today() + datetime.timedelta(days=0)\n",
-    "        solar = 159280\n",
-    "        wind = 110218\n",
-    "        load = 112403\n",
-    "    else:\n",
-    "        dtfrom = datetime.date.today() + datetime.timedelta(days=0)\n",
-    "        dtto = datetime.date.today() + datetime.timedelta(days=2)\n",
-    "        solar = 159277\n",
-    "        wind = 45358\n",
-    "        load = 2635\n",
-    "    \n",
-    "    rtm_hub = nrg_clean(str(dtfrom), str(dtto), [\"prices\", \"rtm_north\"], [92594])\n",
-    "    erc_fundamentals = nrg_clean(str(dtfrom), str(dtto), [\"fundamentals\",\"solar\", \"wind\", \"outages\", \"load\"], [solar, wind, 127656, load])\n",
-    "\n",
-    "    erc_fundies = pd.merge(pd.merge(pd.merge(erc_fundamentals[0], erc_fundamentals[1][[\"Date\",\"wind\"]], on=\"Date\", how=\"left\"), \n",
-    "                            erc_fundamentals[2][[\"Date\", \"outages\"]],on = \"Date\",how=\"left\"),\n",
-    "                            erc_fundamentals[3][[\"Date\", \"load\"]],on = \"Date\",how=\"left\")     \n",
-    "    \n",
-    "    erc_fundies[\"net_load\"] = erc_fundies[\"load\"] + erc_fundies[\"outages\"] - erc_fundies[\"solar\"] - erc_fundies[\"wind\"]\n",
-    "    if for_act == \"actual\":\n",
-    "        erc_fundies = pd.merge(erc_fundies, rtm_hub[0][[\"Date\", \"rtm_north\", \"Year\", \"Month\", \"Day\", \"Hour\"]], on = [\"Year\", \"Month\", \"Day\", \"Hour\"],how = \"left\")\n",
-    "        if  erc_fundies[\"Date_y\"].unique()[0] not in erc_historical[\"Date_y\"]:\n",
-    "           all_erc = pd.concat([erc_fundies,erc_historical], ignore_index=True)\n",
-    "           all_erc.to_pickle(\"erc_fundamentals.pkl\")\n",
-    "           return(all_erc)\n",
-    "        else:\n",
-    "           return(erc_historical) \n",
-    "    else:\n",
+    "#     erc_fundies[\"net_load\"] = erc_fundies[\"load\"] + erc_fundies[\"outages\"] - erc_fundies[\"solar\"] - erc_fundies[\"wind\"]\n",
+    "#     if for_act == \"actual\":\n",
+    "#         erc_fundies = pd.merge(erc_fundies, rtm_hub[0][[\"Date\", \"rtm_north\", \"Year\", \"Month\", \"Day\", \"Hour\"]], on = [\"Year\", \"Month\", \"Day\", \"Hour\"],how = \"left\")\n",
+    "#         if  erc_fundies[\"Date_y\"].unique()[0] not in erc_historical[\"Date_y\"]:\n",
+    "#            all_erc = pd.concat([erc_fundies,erc_historical], ignore_index=True)\n",
+    "#            all_erc.to_pickle(\"erc_fundamentals.pkl\")\n",
+    "#            return(all_erc)\n",
+    "#         else:\n",
+    "#            return(erc_historical) \n",
+    "#     else:\n",
     "            \n",
-    "        erc_fundies[\"Date_y\"] = pd.to_datetime(erc_fundies[\"Date\"], format=\"%b %d %Y %H:00\").dt.date\n",
-    "        return(erc_fundies)\n",
+    "#         erc_fundies[\"Date_y\"] = pd.to_datetime(erc_fundies[\"Date\"], format=\"%b %d %Y %H:00\").dt.date\n",
+    "#         return(erc_fundies)\n",
     "\n",
     "\n",
-    "erc_funHist = ercot_fundamentlas(\"actual\")\n",
-    "erc_funFor = ercot_fundamentlas(\"forecast\") \n",
+    "# erc_funHist = ercot_fundamentlas(\"actual\")\n",
+    "# erc_funFor = ercot_fundamentlas(\"forecast\") \n",
     "\n",
     "\n",
     "\n"
