some add/deletes

--- a/ERC_Prices.ipynb
+++ b/ERC_Prices.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'urllib3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[0;32m      8\u001b[0m pd\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mmode\u001b[38;5;241m.\u001b[39mchained_assignment \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \n\u001b[1;32m----> 9\u001b[0m \u001b[43murllib3\u001b[49m\u001b[38;5;241m.\u001b[39mdisable_warnings(urllib3\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mInsecureRequestWarning)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'urllib3' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Import Packages\n",
     "import pandas as pd\n",
@@ -14,7 +26,7 @@
     "from ErcotApi import ercot_connection\n",
     "import seaborn as sns\n",
     "pd.options.mode.chained_assignment = None \n",
-    "#urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)\n"
+    "urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)\n"
    ]
   },
   {
@@ -120,9 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\NL6586\\AppData\\Roaming\\Python\\Python312\\site-packages\\urllib3\\connectionpool.py:1099: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ercotb2c.b2clogin.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\NL6586\\AppData\\Roaming\\Python\\Python312\\site-packages\\urllib3\\connectionpool.py:1099: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ercotb2c.b2clogin.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "#Bal Day\n",
     "#ERCOT Prices Calls\n",
